# EasyRPG

./: .gitignore  .gitmodules  easyrpg.workspace  svn.authors
Editor/: Editor.sln
Editor/EasyRPG.Editor/: App.xaml  App.xaml.cs  Data.cs  EasyRPG.Editor.csproj  MainWindow.xaml  MainWindow.xaml.cs
Editor/EasyRPG.Editor.Common/: EasyRPG.Editor.Common.csproj  ExtendedObservableCollection.cs  NotifyPropertyChanged.cs
Editor/EasyRPG.Editor.Common/Properties/: AssemblyInfo.cs
Editor/EasyRPG.Editor.RPG/: Actor.cs  Animation.CellData.cs  Animation.Frame.cs  Animation.Timing.cs  Animation.cs  Attribute.cs  BattleCommand.cs  BattleCommands.cs  BattlerAnimation.Extension.cs  BattlerAnimation.cs  BattlerAnimationData.cs  Chipset.cs  Class.cs  CommonEvent.cs  Database.cs  EasyRPG.Editor.RPG.csproj  Encounter.cs  Enemy.cs  EnemyAction.cs  Event.Page.Condition.cs  Event.Page.cs  Event.cs  EventCommand.cs  Item.cs  ItemAnimation.cs  Learning.cs  Map.cs  Mapinfo.cs  MoveCommand.cs  MoveRoute.cs  Music.cs  Skill.cs  Sound.cs  State.cs  System.cs  Terms.cs  Terrain.cs  TestBattler.cs  TreeMap.cs  Troop.Member.cs  (+3 more)
Editor/EasyRPG.Editor.RPG/Properties/: AssemblyInfo.cs
Editor/EasyRPG.Editor.Serializer/: EasyRPG.Editor.Serializer.csproj
Editor/EasyRPG.Editor.Serializer/Properties/: AssemblyInfo.cs
Editor/EasyRPG.Editor.Serializer/RM2K/: Reader.cs
Editor/EasyRPG.Editor/Controls/: CharacterSelector.xaml  CharacterSelector.xaml.cs  FaceSelector.xaml  FaceSelector.xaml.cs  FileSourceDisplay.cs  NearestNeighborImage.cs  ParameterGraphic.xaml  ParameterGraphic.xaml.cs  TiledSelectableImage.xaml  (+1 more)
Movie/: tst.cbp
Movie/src/: Movie.cpp  main.cpp
cmake_module/: FindGTK2.cmake  FindIconv.cmake  FindPixman.cmake  UseVala.cmake
editor/: AUTHORS  CMakeLists.txt  Makefile  configure  editor.project
editor/builds/cmake/: CMakeLists.txt
editor/builds/codelite/: editor.project
editor/builds/vs2008/: Editor.sln  Editor.vcproj
editor/builds/vs2010/: Editor.sln  Editor.vcxproj  Editor.vcxproj.filters
editor/resources/: editor.rc
editor/resources/gui/: gui_database.fbp  gui_database_actors.fbp  gui_database_animations.fbp  gui_database_attributes.fbp  gui_database_common_events.fbp  gui_database_enemies.fbp  gui_database_items.fbp  gui_database_skills.fbp  gui_database_states.fbp  gui_database_system.fbp  gui_database_terrains.fbp  gui_database_texts.fbp  gui_database_tilesets.fbp  gui_database_troops.fbp  gui_editor.fbp  gui_events.fbp  gui_events_page_1.fbp  gui_events_page_2.fbp  gui_events_page_3.fbp
editor/resources/osx/: Info.plist
editor/resources/win/: editor.rc
editor/share/splash/: easyrpg-splash-256.xpm
editor/src/: DialogDb.cpp  DialogDb.h  DialogDbLearnSkill.cpp  DialogDbLearnSkill.h  DialogDbMaxNumber.cpp  DialogDbMaxNumber.h  DialogDbSelectAnyGraphic.cpp  DialogDbSelectAnyGraphic.h  DialogEvt.cpp  DialogEvt.h  DialogEvtCmd.cpp  DialogEvtCmd.h  DialogEvtCmdActorFaceGraphic.cpp  DialogEvtCmdActorFaceGraphic.h  DialogEvtCmdActorGraphic.cpp  DialogEvtCmdActorGraphic.h  DialogEvtCmdActorName.cpp  DialogEvtCmdActorName.h  DialogEvtCmdActorNameInput.cpp  DialogEvtCmdActorNameInput.h  DialogEvtCmdActorTitle.cpp  DialogEvtCmdActorTitle.h  DialogEvtCmdActorTransparency.cpp  DialogEvtCmdActorTransparency.h  DialogEvtCmdAnimation.cpp  DialogEvtCmdAnimation.h  DialogEvtCmdBattle.cpp  DialogEvtCmdBattle.h  DialogEvtCmdBlankScreen.cpp  DialogEvtCmdBlankScreen.h  DialogEvtCmdCallEvent.cpp  DialogEvtCmdCallEvent.h  DialogEvtCmdChangeEscapePlace.cpp  DialogEvtCmdChangeEscapePlace.h  DialogEvtCmdChangeLevel.cpp  DialogEvtCmdChangeLevel.h  DialogEvtCmdChangeVehiclePosition.cpp  DialogEvtCmdChangeVehiclePosition.h  DialogEvtCmdChoice.cpp  DialogEvtCmdChoice.h  (+417 more)
editor/win32/: easyrpg.rc
player/: CMakeLists.txt
player/builds/cmake/: CMakeLists.txt
player/src/: audio.cpp  background.cpp  baseui.cpp  baseui.hpp  battle_algorithms.cpp  battle_animation.cpp  battle_battler.cpp  bitmap.cpp  bitmap.hpp  bitmap_screen.cpp  bitmap_screen.hpp  bitmap_utils.cpp  bitmap_utils.hpp  blit.cpp  blit.hpp  cache.cpp  cache.hpp  color.cpp  color.hpp  filefinder.hpp  filefinder_basic.cpp  filefinder_unix.cpp  filefinder_win.cpp  font.cpp  font.hpp  font_render_8x8.cpp  font_render_8x8.hpp  ftfont.cpp  ftfont.hpp  game_actor.cpp  game_actor.hpp  game_actors.cpp  game_actors.hpp  game_battle.cpp  game_battler.cpp  game_character.cpp  game_character.hpp  game_commonevent.cpp  game_commonevent.hpp  game_enemy.cpp  (+215 more)
player/src/exclude/: game_troop.cpp  game_troop.h
readers/include/: data.h  event_reader.h  ldb_chunks.h  ldb_reader.h  lmt_chunks.h  lmt_reader.h  lmu_reader.h  lsd_chunks.h  lsd_reader.h  reader.h  reader_options.h  reader_struct.h  reader_xml.h  rpg_actor.h  rpg_animation.h  rpg_animationcelldata.h  rpg_animationframe.h  rpg_animationtiming.h  rpg_attribute.h  rpg_battlecommand.h  rpg_battleranimation.h  rpg_battleranimationdata.h  rpg_battleranimationextension.h  rpg_chipset.h  rpg_class.h  rpg_commonevent.h  rpg_database.h  rpg_encounter.h  rpg_enemy.h  rpg_enemyaction.h  rpg_event.h  rpg_eventcommand.h  rpg_eventpage.h  rpg_eventpagecondition.h  rpg_item.h  rpg_itemanimation.h  rpg_learning.h  rpg_map.h  rpg_mapinfo.h  rpg_movecommand.h  (+16 more)
readers/src/: data.cpp  ldb_actor.cpp  ldb_animation.cpp  ldb_animationcelldata.cpp  ldb_animationframe.cpp  ldb_animationtiming.cpp  ldb_attribute.cpp  ldb_battlecommand.cpp  ldb_battleranimation.cpp  ldb_battleranimationdata.cpp  ldb_battleranimationextension.cpp  ldb_chipset.cpp  ldb_class.cpp  ldb_commonevent.cpp  ldb_enemy.cpp  ldb_enemyaction.cpp  ldb_item.cpp  ldb_itemanimation.cpp  ldb_learning.cpp  ldb_reader.cpp  ldb_skill.cpp  ldb_state.cpp  ldb_system.cpp  ldb_terms.cpp  ldb_terrain.cpp  ldb_testbattler.cpp  ldb_troop.cpp  ldb_troopmember.cpp  ldb_trooppage.cpp  ldb_trooppagecondition.cpp  lmt_mapinfo.cpp  lmt_reader.cpp  lmu_event.cpp  lmu_eventpage.cpp  lmu_eventpagecondition.cpp  lmu_moveroute.cpp  lmu_reader.cpp  lsd_actor.cpp  lsd_commonevents.cpp  lsd_data.cpp  (+22 more)
tools/Movie/: icono.avi  tst.cbp  tst.depend  tst.layout
(+132 files in other folders)
