CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT("EasyRPG_Editor" CXX C)

FIND_PACKAGE(wxWidgets COMPONENTS gl core base REQUIRED)
INCLUDE(${wxWidgets_USE_FILE})

ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/../rpg2kLib/EASTL ${CMAKE_CURRENT_SOURCE_DIR}/../rpg2kLib/EASTL)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/../rpg2kLib ${CMAKE_CURRENT_SOURCE_DIR}/../rpg2kLib)
INCLUDE(${CMAKE_CURRENT_SOURCE_DIR}/../rpg2kLib/rpg2kLib.cmake)
FIND_RPG2KLIB(${CMAKE_CURRENT_SOURCE_DIR}/../rpg2kLib)

AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/src SRCS)
ADD_EXECUTABLE(${PROJECT_NAME} ${SRCS})
TARGET_LINK_LIBRARIES(${PROJECT_NAME}
	${rpg2kLib_LIBRARIES}
	${wxWidgets_LIBRARIES}
)

ADD_DEPENDENCIES(${PROJECT_NAME} rpg2kLib)
