CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT("EasyRPG_Player" CXX C)

ADD_DEFINITIONS(-D UNIX=1)
ADD_DEFINITIONS(-D USE_SDL=1)

FIND_PACKAGE(SDL REQUIRED)
FIND_PACKAGE(SDL_image REQUIRED)
FIND_PACKAGE(SDL_mixer REQUIRED)
FIND_PACKAGE(SDL_ttf REQUIRED)
INCLUDE_DIRECTORIES(
	${SDL_INCLUDE_DIR}
	${SDLIMAGE_INCLUDE_DIR}
	${SDLMIXER_INCLUDE_DIR}
	${SDLTTF_INCLUDE_DIR}
)

ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/../rpg2kLib/EASTL ${CMAKE_CURRENT_SOURCE_DIR}/../rpg2kLib/EASTL)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/../rpg2kLib ${CMAKE_CURRENT_SOURCE_DIR}/../rpg2kLib)
INCLUDE(${CMAKE_CURRENT_SOURCE_DIR}/../rpg2kLib/rpg2kLib.cmake)
FIND_RPG2KLIB(${CMAKE_CURRENT_SOURCE_DIR}/../rpg2kLib)

AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/src SRCS)
ADD_EXECUTABLE(${PROJECT_NAME} ${SRCS})
TARGET_LINK_LIBRARIES(${PROJECT_NAME}
	${rpg2kLib_LIBRARIES}
	${SDL_LIBRARY}
	${SDLIMAGE_LIBRARY}
	${SDLMIXER_LIBRARY}
	${SDLTTF_LIBRARY}
)

ADD_DEPENDENCIES(${PROJECT_NAME} rpg2kLib)
