bin_PROGRAMS = easyrpg

easyrpg_SOURCES = \
DialogDb.cpp \
DialogDbLearnSkill.cpp \
DialogDbMaxNumber.cpp \
DialogDbSelectAnyGraphic.cpp \
DialogEvtCmdActorFaceGraphic.cpp \
DialogEvtCmdActorGraphic.cpp \
DialogEvtCmdActorName.cpp \
DialogEvtCmdActorNameInput.cpp \
DialogEvtCmdActorTitle.cpp \
DialogEvtCmdActorTransparency.cpp \
DialogEvtCmdAnimation.cpp \
DialogEvtCmdBattle.cpp \
DialogEvtCmdBlankScreen.cpp \
DialogEvtCmdCallEvent.cpp \
DialogEvtCmdChoice.cpp \
DialogEvtCmdCommerce.cpp \
DialogEvtCmdConditions.cpp \
DialogEvtCmd.cpp \
DialogEvtCmdDamage.cpp \
DialogEvtCmdDeletePicture.cpp \
DialogEvtCmdEncounterRate.cpp \
DialogEvtCmdEquipment.cpp \
DialogEvtCmdEscapePermissions.cpp \
DialogEvtCmdEscapePlace.cpp \
DialogEvtCmdEventMovement.cpp \
DialogEvtCmdEventPosition.cpp \
DialogEvtCmdExperience.cpp \
DialogEvtCmdFaceGraphic.cpp \
DialogEvtCmdFadeMusic.cpp \
DialogEvtCmdFlashCharacter.cpp \
DialogEvtCmdFlashScreen.cpp \
DialogEvtCmdGetPositionID.cpp \
DialogEvtCmdGetTerrainID.cpp \
DialogEvtCmdGoToLabel.cpp \
DialogEvtCmdGoToMemorizedPlace.cpp \
DialogEvtCmdHP.cpp \
DialogEvtCmdInn.cpp \
DialogEvtCmdItem.cpp \
DialogEvtCmdKeyAssignment.cpp \
DialogEvtCmdLabel.cpp \
DialogEvtCmdLevel.cpp \
DialogEvtCmdMemorizePlace.cpp \
DialogEvtCmdMessage.cpp \
DialogEvtCmdMessageOptions.cpp \
DialogEvtCmdMoney.cpp \
DialogEvtCmdMovePicture.cpp \
DialogEvtCmdMoveScreen.cpp \
DialogEvtCmdMP.cpp \
DialogEvtCmdNotes.cpp \
DialogEvtCmdNumberInput.cpp \
DialogEvtCmdPanorama.cpp \
DialogEvtCmdParameter.cpp \
DialogEvtCmdParty.cpp \
DialogEvtCmdPicture.cpp \
DialogEvtCmdPlayMusic.cpp \
DialogEvtCmdPlaySound.cpp \
DialogEvtCmdPlayVideo.cpp \
DialogEvtCmdRecover.cpp \
DialogEvtCmdSavePermissions.cpp \
DialogEvtCmdShake.cpp \
DialogEvtCmdShowScreen.cpp \
DialogEvtCmdSkill.cpp \
DialogEvtCmdStatus.cpp \
DialogEvtCmdSwapEvents.cpp \
DialogEvtCmdSwitch.cpp \
DialogEvtCmdSystemGraphic.cpp \
DialogEvtCmdSystemMenuPermissions.cpp \
DialogEvtCmdSystemMusic.cpp \
DialogEvtCmdSystemSound.cpp \
DialogEvtCmdTeleport.cpp \
DialogEvtCmdTeleportPermissions.cpp \
DialogEvtCmdTeleportPlace.cpp \
DialogEvtCmdTile.cpp \
DialogEvtCmdTileset.cpp \
DialogEvtCmdTimer.cpp \
DialogEvtCmdTone.cpp \
DialogEvtCmdTransition.cpp \
DialogEvtCmdVariable.cpp \
DialogEvtCmdVehicleGraphic.cpp \
DialogEvtCmdVehiclePosition.cpp \
DialogEvtCmdWait.cpp \
DialogEvtCmdWeather.cpp \
DialogEvt.cpp \
DialogMap.cpp \
DialogMaterial.cpp \
FrameEditor.cpp \
main.cpp

