CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT("EasyRPG_Editor" CXX C)

FIND_PACKAGE(wxWidgets COMPONENTS gl core base adv REQUIRED)
INCLUDE(${wxWidgets_USE_FILE})

ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/../../../readers/builds/cmake ${CMAKE_CURRENT_SOURCE_DIR}/../../../readers/builds/cmake)

AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/../../src SRCS)
ADD_EXECUTABLE(${PROJECT_NAME} ${SRCS})
LINK_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../../../readers/builds/cmake)
TARGET_LINK_LIBRARIES(${PROJECT_NAME}
	${wxWidgets_LIBRARIES}
	EasyRPG_Reader
)

ADD_DEPENDENCIES(${PROJECT_NAME} EasyRPG_Reader)
