CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT("EasyRPG_Editor" CXX C)

# reader
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/../../../readers/builds/cmake ${CMAKE_CURRENT_SOURCE_DIR}/../../../readers/builds/cmake)

SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/../../bin)
SET(LIBRARY_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/../../lib)

FIND_PACKAGE(wxWidgets COMPONENTS core base adv REQUIRED)
INCLUDE(${wxWidgets_USE_FILE})

AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/../../src SRCS)
ADD_EXECUTABLE(${PROJECT_NAME} ${SRCS})
LINK_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../../../readers/lib)
TARGET_LINK_LIBRARIES(${PROJECT_NAME}
	${wxWidgets_LIBRARIES}
	EasyRPG_Reader
)

ADD_DEPENDENCIES(${PROJECT_NAME} EasyRPG_Reader)
