CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(EasyRPG_Player)

FIND_PACKAGE(Boost COMPONENTS serialization REQUIRED)
FIND_PACKAGE(OpenAL REQUIRED)
FIND_PACKAGE(PNG REQUIRED)
FIND_PACKAGE(SDL REQUIRED)
FIND_PACKAGE(SDL_image REQUIRED)
FIND_PACKAGE(SDL_mixer REQUIRED)
FIND_PACKAGE(SDL_ttf REQUIRED)
FIND_PACKAGE(ZLIB REQUIRED)

ADD_DEFINITIONS(
	${PNG_DEFINITIONS}

	-D UNIX=1
	-D USE_SDL=1
	-D USE_OPENAL=1

	-Wall -Werror # -Wextra
	-Wno-mismatched-tags
	-fno-exceptions -fno-rtti
)

INCLUDE(TestBigEndian)
TEST_BIG_ENDIAN(IS_BIG_ENDIAN)
IF(${IS_BIG_ENDIAN})
	ADD_DEFINITIONS(-D READER_BIG_ENDIAN=1)
ENDIF()

IF(${CMAKE_BUILD_TYPE} STREQUAL "Debug")
	ADD_DEFINITIONS(-D _DEBUG=1)
ENDIF()

INCLUDE_DIRECTORIES(
	${Boost_INCLUDE_DIRS}
	${OPENAL_INCLUDE_DIR}
	${PNG_INCLUDE_DIR}
	${SDL_INCLUDE_DIR}
	${SDLIMAGE_INCLUDE_DIR}
	${SDLMIXER_INCLUDE_DIR}
	${SDLTTF_INCLUDE_DIR}
	${ZLIB_INCLUDE_DIRS}

	${CMAKE_CURRENT_SOURCE_DIR}/../../../readers/include
)

ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/../../../readers/builds/cmake ${CMAKE_CURRENT_SOURCE_DIR}/../../../readers/builds/cmake)
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/../../src SRCS)

SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/../../bin/testgame)
ADD_EXECUTABLE(${PROJECT_NAME} ${SRCS})
TARGET_LINK_LIBRARIES(${PROJECT_NAME}
	${Boost_LIBRARIES}
	${OPENAL_LIBRARY}
	${PNG_LIBRARIES}
	${SDL_LIBRARY}
	${SDLIMAGE_LIBRARY}
	${SDLMIXER_LIBRARY}
	${SDLTTF_LIBRARY}
	${ZLIB_LIBRARIES}

	EasyRPG_Reader

	avformat avcodec avutil avdevice
	iconv
)

ADD_DEPENDENCIES(${PROJECT_NAME} EasyRPG_Reader)
